--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   id="icon"
                   class="mage"
                 />
-                <span class="temperature" id="temperature">12</span
+                <span class="temperature" id="temperature"></span
                 ><span class="units">
                   <a href="#" id="celsius-link">°C</a> |
                   <a href="#" id="fahrenheit-link">°F</a>
