Changed the Git link in index.html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
       </div>
       <center>
         <small>
-          <a href="https://github.com/Ivxyen/weather-app" target="_blank">
+          <a
+            href="https://github.com/Ivxyen/Vanilla-Weather-App"
+            target="_blank"
+          >
             Open-source code</a
           >
           by Camille Nguyen
