Changed the Icon Position

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
         </ul>
         <div class="row">
           <div class="col-6">
-            <div class="clearfix">
+            <div class="d-flex align-items-center">
+              <img
+                src="http://openweathermap.org/img/wn/04d@2x.png"
+                alt="sunny"
+                id="icon"
+                class="mage"
+              />
               <div class="float-left">
-                <img
-                  src="http://openweathermap.org/img/wn/04d@2x.png"
-                  alt="sunny"
-                  id="icon"
-                  class="mage"
-                />
                 <span class="temperature" id="temperature"></span
                 ><span class="units">
                   <a href="#" id="celsius-link">°C</a> |
